# money-manager

./: .codebase  .gitignore  README.md  design.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/accounts/: __init__.py  models.py  repository.py  service.py
app/api/: __init__.py  dependencies.py  main.py  schemas.py
app/api/routers/: accounts.py  investments.py  subscriptions.py
app/core/: __init__.py  dates.py  money.py  period.py
app/dashboard/: __init__.py  investments.py  monthly.py  yearly.py
app/investments/: __init__.py  calculator.py  models.py  repository.py  service.py
app/storage/: __init__.py  db.py
app/storage/migrations/: 001_init.sql  002_subscriptions.sql  003_investments.sql  __init__.py
app/subscriptions/: __init__.py  generator.py  models.py  repository.py  service.py
app/utils/: csv_validators.py  ids.py  logging.py
app/web/: Home.py  __init__.py  api_client.py  main.py
app/web/pages/: 1_Accounts.py  2_Subscriptions.py  3_Investments.py
design/: controller.md  design.md  model.md  phase1_documentation.md  ui.md
src/core/: __init__.py  database.py  main.py  utils.py
src/core/api/: categories.py  subscriptions.py  transactions.py  users.py
src/core/apis/: categories.py  payments.py  subscriptions.py  transactions.py  users.py
src/core/controller/: __init__.py  base.py  categories.py  export_import.py  investments.py  subscriptions.py  transactions.py  users.py
src/core/domain/: __init__.py  base.py  entities.py  models.py
src/core/models/: __init__.py  category.py  payment.py  subscription.py  transaction.py  user.py
src/core/repositories/: __init__.py  base.py  category.py  investments.py  payment.py  subscription.py  subscriptions.py  transaction.py  transactions.py  user.py
src/core/schemas/: __init__.py  category.py  payment.py  subscription.py  transaction.py  user.py
src/core/services/: __init__.py  csv_validators.py  payment_service.py  subscription_service.py  transaction_service.py
src/core/storage/: __init__.py  init_db.py  investments.py  subscriptions.py  transactions.py
src/core/utils/: __init__.py  exceptions.py  helpers.py
src/money_manager/: __init__.py  cli.py  database.py  main.py  models.py  repositories.py  utils.py
src/money_manager/api/: categories.py  subscriptions.py  transactions.py  users.py
src/money_manager/models/: category.py  subscription.py  transaction.py  user.py
src/money_manager/parsers/: __init__.py  base_parser.py
src/money_manager/repositories/: category.py  subscription.py  transaction.py  user.py
src/money_manager/schemas/: subscription.py  user.py
src/money_manager_gradio_ui/: __init__.py  app.py  pyproject.toml
src/money_manager_gradio_ui/components/: __init__.py  categories.py  subscriptions.py  transactions.py  users.py
src/money_manager_streamlit_ui/: __init__.py  api_client.py
src/money_manager_streamlit_ui/pages/: 1_Users.py  2_Categories.py  3_Transactions.py  4_Subscriptions.py
src/web/: Home.py  __init__.py  api_client.py  main.py
src/web/pages/: 1_Accounts.py  1_Users.py  2_Categories.py  3_Transactions.py  4_Subscriptions.py  5_Payments.py  5_Subscription_Instances.py  6_Investments.py  7_Investment_Snapshots.py  8_Investment_Plans.py  9_Investment_Plan_Instances.py  __init__.py
tests/: conftest.py  test_category.py  test_category_repository.py  test_cli.py  test_payment.py  test_subscription.py  test_subscription_repository.py  test_transaction.py  test_transaction_repository.py  test_user.py  test_user_repository.py  test_version.py
tests/accounts/: __init__.py  test_accounts_repository.py  test_accounts_service.py
tests/api/: __init__.py
tests/api/routers/: __init__.py  test_accounts.py  test_accounts_import_export.py  test_investments.py  test_investments_import_export.py  test_subscriptions.py  test_subscriptions_import_export.py
tests/core/controller/: test_export_import.py  test_investments.py  test_subscriptions.py  test_transactions.py
tests/core/repositories/: test_investments.py  test_subscriptions.py  test_transactions.py
tests/investments/: __init__.py  test_investments_repository.py  test_investments_service.py
tests/subscriptions/: __init__.py  test_subscriptions_repository.py  test_subscriptions_service.py
